WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
226859
logged in GitHub issue pages have bad layout for "Notifications Customize" link
https://bugs.webkit.org/show_bug.cgi?id=226859
Summary
logged in GitHub issue pages have bad layout for "Notifications Customize" link
Cameron McCormack (:heycam)
Reported
2021-06-09 17:32:00 PDT
Created
attachment 431031
[details]
screen shot See attached screen shot. On a logged in GitHub issue page, there is a link just above the Subscribe button that says "Notifications Customize". In Firefox and Chrome, the "Notifications" is left-aligned and the "Customize" is right-aligned, all within the one line. In Safari, the "Notifications" and "Customize" run together. Probably a flexbox issue.
Attachments
screen shot
(80.39 KB, image/png)
2021-06-09 17:32 PDT
,
Cameron McCormack (:heycam)
no flags
Details
reduced test
(331 bytes, text/html)
2021-06-10 15:11 PDT
,
Cameron McCormack (:heycam)
no flags
Details
Patch
(5.85 KB, patch)
2021-06-11 03:00 PDT
,
Sergio Villar Senin
no flags
Details
Formatted Diff
Diff
Patch
(12.55 KB, patch)
2021-06-14 10:10 PDT
,
Sergio Villar Senin
zalan
: review+
ews-feeder
: commit-queue-
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Cameron McCormack (:heycam)
Comment 1
2021-06-09 18:18:54 PDT
Regression is somewhere in this range:
https://trac.webkit.org/log/webkit/trunk?mode=follow_copy&rev=278319&stop_rev=278253
My guess is
https://trac.webkit.org/changeset/278280/webkit/trunk
since it is a <summary> element that is the flex container here.
Radar WebKit Bug Importer
Comment 2
2021-06-09 18:29:38 PDT
<
rdar://problem/79112904
>
Cameron McCormack (:heycam)
Comment 3
2021-06-10 15:11:55 PDT
Created
attachment 431139
[details]
reduced test
Cameron McCormack (:heycam)
Comment 4
2021-06-10 16:20:53 PDT
The problem here is the
https://trac.webkit.org/changeset/278280/webkit/trunk
change, which makes <summary style="display: list-item;"> fall back to <summary style="display: flex;">.
Antti Koivisto
Comment 5
2021-06-10 22:12:37 PDT
Should probably just revert
bug 190065
, it doesn't sound like it is correct.
Sergio Villar Senin
Comment 6
2021-06-11 03:00:39 PDT
Created
attachment 431186
[details]
Patch
EWS Watchlist
Comment 7
2021-06-11 03:02:03 PDT
This patch modifies the imported WPT tests. Please ensure that any changes on the tests (not coming from a WPT import) are exported to WPT. Please see
https://trac.webkit.org/wiki/WPTExportProcess
Sergio Villar Senin
Comment 8
2021-06-11 03:15:39 PDT
I'm upstreaming the WPT test here
https://github.com/web-platform-tests/wpt/pull/29341
I'll import it as part of this patch once it get the r+
Sergio Villar Senin
Comment 9
2021-06-14 10:10:16 PDT
Created
attachment 431340
[details]
Patch
alan
Comment 10
2021-06-14 15:35:26 PDT
Comment on
attachment 431340
[details]
Patch OnlyCreateBlockAndFlexboxRenderers sounds very odd and indefinite :(
Sergio Villar Senin
Comment 11
2021-06-15 00:44:27 PDT
(In reply to zalan from
comment #10
)
> Comment on
attachment 431340
[details]
> Patch > > OnlyCreateBlockAndFlexboxRenderers sounds very odd and indefinite :(
Well that's already there. I guess you mean we should change it in follow up patches...
Sergio Villar Senin
Comment 12
2021-06-15 01:32:43 PDT
Committed
r278864
(
238808@main
): <
https://commits.webkit.org/238808@main
>
alan
Comment 13
2021-06-16 06:18:38 PDT
(In reply to Sergio Villar Senin from
comment #11
)
> (In reply to zalan from
comment #10
) > > Comment on
attachment 431340
[details]
> > Patch > > > > OnlyCreateBlockAndFlexboxRenderers sounds very odd and indefinite :( > > Well that's already there. I guess you mean we should change it in follow up > patches...
I addressed it here
https://trac.webkit.org/changeset/278919/webkit
Sergio Villar Senin
Comment 14
2021-06-16 09:28:36 PDT
(In reply to zalan from
comment #13
)
> (In reply to Sergio Villar Senin from
comment #11
) > > (In reply to zalan from
comment #10
) > > > Comment on
attachment 431340
[details]
> > > Patch > > > > > > OnlyCreateBlockAndFlexboxRenderers sounds very odd and indefinite :( > > > > Well that's already there. I guess you mean we should change it in follow up > > patches... > I addressed it here >
https://trac.webkit.org/changeset/278919/webkit
Heh, much better indeed.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug