logged in GitHub issue pages have bad layout for "Notifications Customize" link https://bugs.webkit.org/show_bug.cgi?id=226859

Reviewed by Alan Bujtas.

LayoutTests/imported/w3c:

* web-platform-tests/html/rendering/the-details-element/summary-display-list-item-002-expected.html: Added.
* web-platform-tests/html/rendering/the-details-element/summary-display-list-item-002.html: Added.

Source/WebCore:

Test: imported/w3c/web-platform-tests/html/rendering/the-details-element/summary-display-list-item-002.html

In r278280 we made display:list-item on <summary> elements to fallback to display:flexbox in order not to
show two markers. However there is no reason why it should be a flexible box instead of a block container,
actually is causing issues in some sites. We better fallback to block instead of flexbox renderer.

* rendering/RenderElement.cpp:
(WebCore::RenderElement::createFor): create a RenderBlockFlow when OnlyCreateBlockAndFlexboxRenderers is
specified (right now only by summary elements).

Canonical link: https://commits.webkit.org/238808@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@278864 268f45cc-cd09-0410-ab3c-d52691b4dbfc